# pyAggregate

./: .gitignore  CLAUDE.md  README.md  diag.py  pyaggregate.example.toml  pyaggregate.toml  pyproject.toml
.claude/: settings.json
docs/: migration.md  operations.md
docs/design-plans/: 2026-05-14-pyaggregate-unify-qa-qm-sdd.md  2026-05-20-rework-output-config.md  2026-05-21-dpid-filtering.md  2026-05-21-per-run-manifest.md
docs/implementation-plans/2026-05-14-pyaggregate-unify-qa-qm-sdd/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  phase_07.md  phase_08.md  test-requirements.md
docs/implementation-plans/2026-05-20-rework-output-config/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  test-requirements.md
docs/implementation-plans/2026-05-21-dpid-filtering/: phase_01.md  phase_02.md  phase_03.md  (+1 more)
docs/test-plans/: 2026-05-14-pyaggregate-unify-qa-qm-sdd.md  2026-05-20-rework-output-config.md  2026-05-21-dpid-filtering.md  2026-05-21-per-run-manifest.md
examples/: pyaggregate.toml
src/pyaggregate/: __init__.py  cli.py  config.py  log_config.py
src/pyaggregate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_catalog_store.py  test_config.py  test_dpid_mask.py  test_e2e_smoke.py  test_input_resolution.py  test_log_config.py  test_paths.py  test_pipeline_rollup.py  test_pipeline_stacked.py  test_run_orchestration.py  test_sas_reader.py  test_scanner.py  test_scanner_concurrency.py  test_stats_exclusion.py  test_writer.py
tests/fixtures/: __init__.py  builders.py
(+13 files in other folders)
