[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaggregate"
version = "0.1.0"
description = "Unified QA, QM, and SCDM Snapshot aggregation CLI"
requires-python = ">=3.11"
dependencies = [
    "polars-runtime-64>=1.40.0",
    "polars-readstat>=0.14.0",
    "typer>=0.12.0",
]

[project.scripts]
pyaggregate = "pyaggregate.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "hypothesis>=6.100.0",
    "mypy>=1.10.0",
    "ruff>=0.15.12",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: tests that hit the filesystem or network"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    ".worktrees",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "SIM117", "E402", "B904", "SIM105", "SIM401", "B905", "TC001", "F841"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
